# stat

./: LICENSE  README.md  setup.cfg
docs/: conf.py  index.rst  stat.rst
src/stat/: __init__.py  carlo.py  chi.py  clt.py  epstein.py  fib.py  fitness.py  independence-test.py  kolmogorov-Smirnov.py  kstest-tn.py  linear_fitting.py  mat.py  mean-test.py  mean.py  median.py  moment.py  norm.py  pairwise-normal.py  pca.py  polyregression.py  qqplot.py  test_median.py  var.py  variation.py
test/: test_moment.py
