[metadata]
name = stat
version = 0.0.1
author = easai
description = A collection of stat classes/functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easai/integral
license_files = LICENSE
license = MIT
project_urls =
    Bug Tracker = https://github.com/easai/stat/issues
classifiers =
    Programming Language :: Python :: 3.10.0
    License :: OSI Approved :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
